EnvironmentSimulator/Libraries/esminiLib/esminiLib.hpp

typedef struct
{
    int    id;              
    int    model_id;        
    int    ctrl_type;       
    double timestamp;       
    double x;               
    double y;               
    double z;               
    double h;               
    double p;               
    double r;               
    id_t   roadId;          
    id_t   junctionId;      
    double t;               
    int    laneId;          
    double laneOffset;      
    double s;               
    double speed;           
    double centerOffsetX;   
    double centerOffsetY;   
    double centerOffsetZ;   
    double width;           
    double length;          
    double height;          
    int    objectType;      
    int    objectCategory;  
    double wheel_angle;     
    double wheel_rot;       
    int    visibilityMask;  
} SE_ScenarioObjectState;
typedef struct
{
    const char *name;   
    void       *value;  
} SE_Parameter;
typedef struct
{
    const char *name;   
    void       *value;  
} SE_Variable;
typedef struct
{
    int            width;
    int            height;
    int            pixelSize;    
    int            pixelFormat;  
    unsigned char *data;
} SE_Image;  
    SE_DLL_API int SE_GetOptionValuesCount(const char *name);
    SE_DLL_API const char *SE_GetOptionValueByIndex(const char *name, unsigned int index);
    SE_DLL_API bool SE_GetOptionSet(const char *name);
    SE_DLL_API void SE_SetWindowPosAndSize(int x, int y, int w, int h);
    SE_DLL_API void SE_RegisterParameterDeclarationCallback(void (*fnPtr)(void *), void *user_data);
    SE_DLL_API int SE_SetOSITolerances(double maxLongitudinalDistance, double maxLateralDeviation);
    SE_DLL_API int SE_SetParameterDistribution(const char *filename);
    SE_DLL_API void SE_ResetParameterDistribution();
    SE_DLL_API unsigned int SE_GetNumberOfPermutations();
    SE_DLL_API int SE_SelectPermutation(unsigned int index);
    SE_DLL_API int SE_GetPermutationIndex();
    SE_DLL_API int SE_Init(const char *oscFilename, int disable_ctrls, int use_viewer, int threads, int record);
    SE_DLL_API int SE_InitWithString(const char *oscAsXMLString, int disable_ctrls, int use_viewer, int threads, int record);
    SE_DLL_API int SE_InitWithArgs(int argc, const char *argv[]);
    SE_DLL_API int SE_GetQuitFlag();
    SE_DLL_API int SE_GetPauseFlag();
    SE_DLL_API const char *SE_GetODRFilename();
    SE_DLL_API const char *SE_GetSceneGraphFilename();
    SE_DLL_API int SE_GetNumberOfParameters();
    SE_DLL_API const char *SE_GetParameterName(int index, int *type);
    SE_DLL_API int SE_GetNumberOfVariables();
    SE_DLL_API const char *SE_GetVariableName(int index, int *type);
    SE_DLL_API int SE_GetNumberOfProperties(int index);
    SE_DLL_API const char *SE_GetObjectPropertyName(int index, int propertyIndex);
    SE_DLL_API const char *SE_GetObjectPropertyValue(int index, const char *objectPropertyName);
    SE_DLL_API int SE_SetParameter(SE_Parameter parameter);
    SE_DLL_API int SE_GetParameter(SE_Parameter *parameter_ref);
    SE_DLL_API int SE_GetParameterInt(const char *parameterName, int *value);
    SE_DLL_API int SE_GetParameterDouble(const char *parameterName, double *value);
    SE_DLL_API int SE_GetParameterString(const char *parameterName, const char **value);
    SE_DLL_API int SE_GetParameterBool(const char *parameterName, bool *value);
    SE_DLL_API int SE_SetParameterInt(const char *parameterName, int value);
    SE_DLL_API int SE_SetParameterDouble(const char *parameterName, double value);
    SE_DLL_API int SE_SetParameterString(const char *parameterName, const char *value);
    SE_DLL_API int SE_SetParameterBool(const char *parameterName, bool value);
    SE_DLL_API int SE_SetVariable(SE_Variable variable);
    SE_DLL_API int SE_GetVariable(SE_Variable *variable);
    SE_DLL_API int SE_GetVariableInt(const char *variableName, int *value);
    SE_DLL_API int SE_GetVariableDouble(const char *variableName, double *value);
    SE_DLL_API int SE_GetVariableString(const char *variableName, const char **value);
    SE_DLL_API int SE_GetVariableBool(const char *variableName, bool *value);
    SE_DLL_API int SE_SetVariableInt(const char *variableName, int value);
    SE_DLL_API int SE_SetVariableDouble(const char *variableName, double value);
    SE_DLL_API void SE_RegisterObjectCallback(int object_id, void (*fnPtr)(SE_ScenarioObjectState *, void *), void *user_data);
    SE_DLL_API void SE_RegisterConditionCallback(void (*fnPtr)(const char *name, double timestamp));
    SE_DLL_API void SE_RegisterStoryBoardElementStateChangeCallback(void (*fnPtr)(const char *name, int type, int state, const char *full_path));
    SE_DLL_API void SE_RegisterImageCallback(void (*fnPtr)(SE_Image *, void *), void *user_data);