EnvironmentSimulator/Libraries/esminiLib/ESMiniWrapper.cs


        /// <summary>
        /// Gets a specific value from a list of values for an option.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOptionValueByIndex(string name, uint index);

        /// <summary>
        /// Gets the number of values associated with an option.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetOptionValuesCount(string name);

        /// <summary>
        /// Checks if an option is set.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool SE_GetOptionSet(string name);

        /// <summary>
        /// Loads a parameter distribution file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetParameterDistribution(string filename);

        /// <summary>
        /// Resets the parameter distribution.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_ResetParameterDistribution();

        /// <summary>
        /// Gets the total number of permutations in the loaded parameter distribution.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern uint SE_GetNumberOfPermutations();

        /// <summary>
        /// Selects a specific permutation index for the next simulation run.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SelectPermutation(uint index);

        /// <summary>
        /// Gets the index of the currently selected permutation.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetPermutationIndex();

        /// <summary>
        /// Sets the position and size of the viewer window.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetWindowPosAndSize(int x, int y, int w, int h);

        /// <summary>
        /// Sets tolerances for OSI (Open Simulation Interface) reporting.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOSITolerances(double maxLongitudinalDistance, double maxLateralDeviation);

        /// <summary>
        /// Initializes the engine with command line arguments.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_InitWithArgs(int argc, string[] argv);

        /// <summary>
        /// Initializes the engine with an OpenSCENARIO XML string.
        /// </summary>
        /// <param name="oscAsXMLString">The OpenSCENARIO content as a string.</param>
        /// <param name="disable_ctrls">1 to disable internal controllers, 0 otherwise.</param>
        /// <param name="use_viewer">Bitmask: 1=enable viewer, 2=off-screen, 4=capture-to-file, 8=disable info-text.</param>
        /// <param name="threads">1 to enable threading, 0 otherwise.</param>
        /// <param name="record">1 to enable recording, 0 otherwise.</param>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_InitWithString(string oscAsXMLString, int disable_ctrls, int use_viewer, int threads, int record);

        public delegate void ParameterDeclarationCallback(IntPtr user_data);
        /// <summary>
        /// Registers a callback to be called during parameter declaration.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_RegisterParameterDeclarationCallback(ParameterDeclarationCallback callback, IntPtr user_data);

        /// <summary>
        /// Initializes the engine with an OpenSCENARIO file.
        /// </summary>
        /// <param name="oscFilename">Path to the OpenSCENARIO file.</param>
        /// <param name="disable_ctrls">1 to disable internal controllers, 0 otherwise.</param>
        /// <param name="use_viewer">Bitmask: 1=enable viewer, 2=off-screen, 4=capture-to-file, 8=disable info-text.</param>
        /// <param name="threads">1 to enable threading, 0 otherwise.</param>
        /// <param name="record">1 to enable recording, 0 otherwise.</param>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_Init(string oscFilename, int disable_ctrls, int use_viewer, int threads, int record);

        /// <summary>
        /// Checks if the quit flag has been set (e.g., by closing the window or end of scenario).
        /// </summary>
        /// <returns>1 if quit is requested, 0 otherwise.</returns>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetQuitFlag();

        /// <summary>
        /// Checks if the simulation is currently paused.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetPauseFlag();

        /// <summary>
        /// Gets the filename of the OpenDRIVE road network being used.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetODRFilename();

        /// <summary>
        /// Gets the filename of the OpenSceneGraph scene graph being used.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetSceneGraphFilename();

        /// <summary>
        /// Gets the number of parameters defined in the scenario.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetNumberOfParameters();

        /// <summary>
        /// Gets the name and type of a parameter by index.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetParameterName(int index, out int type);

        /// <summary>
        /// Gets the number of variables defined in the scenario.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetNumberOfVariables();

        /// <summary>
        /// Gets the name and type of a variable by index.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetVariableName(int index, out int type);

        /// <summary>
        /// Gets the number of properties for a specific object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetNumberOfProperties(int index);

        /// <summary>
        /// Gets the name of a property for a specific object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetObjectPropertyName(int index, int propertyIndex);

        /// <summary>
        /// Gets the value of a property for a specific object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetObjectPropertyValue(int index, string objectPropertyName);

        /// <summary>
        /// Sets a parameter value.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetParameter(Parameter parameter);

        /// <summary>
        /// Gets a parameter value.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetParameter(ref Parameter parameter);

        /// <summary>
        /// Gets a parameter value as an integer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetParameterInt(string parameterName, out int value);

        /// <summary>
        /// Gets a parameter value as a double.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetParameterDouble(string parameterName, out double value);

        /// <summary>
        /// Gets a parameter value as a string.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetParameterString(string parameterName, out IntPtr value);

        /// <summary>
        /// Gets a parameter value as a boolean.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetParameterBool(string parameterName, [MarshalAs(UnmanagedType.I1)] out bool value);

        /// <summary>
        /// Sets a parameter value as an integer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetParameterInt(string parameterName, int value);

        /// <summary>
        /// Sets a parameter value as a double.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetParameterDouble(string parameterName, double value);

        /// <summary>
        /// Sets a parameter value as a string.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetParameterString(string parameterName, string value);

        /// <summary>
        /// Sets a parameter value as a boolean.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetParameterBool(string parameterName, [MarshalAs(UnmanagedType.I1)] bool value);

        /// <summary>
        /// Sets a variable value.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetVariable(Variable variable);

        /// <summary>
        /// Gets a variable value.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetVariable(ref Variable variable);

        /// <summary>
        /// Gets a variable value as an integer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetVariableInt(string variableName, out int value);

        /// <summary>
        /// Gets a variable value as a double.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetVariableDouble(string variableName, out double value);

        /// <summary>
        /// Gets a variable value as a string.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetVariableString(string variableName, out IntPtr value);

        /// <summary>
        /// Gets a variable value as a boolean.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetVariableBool(string variableName, [MarshalAs(UnmanagedType.I1)] out bool value);

        /// <summary>
        /// Sets a variable value as an integer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetVariableInt(string variableName, int value);

        /// <summary>
        /// Sets a variable value as a double.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetVariableDouble(string variableName, double value);
